[gd_scene load_steps=7 format=3 uid="uid://bhcvy0qd2gcto"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_47de6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebkaj"]
size = Vector2(123.625, 142.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_yp5yy"]
radius = 265.68

[sub_resource type="CircleShape2D" id="CircleShape2D_5eb51"]
radius = 570.014

[sub_resource type="CircleShape2D" id="CircleShape2D_v7vqt"]
radius = 832.049

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2dbw"]
size = Vector2(783, 92.5)

[node name="Boss" type="CharacterBody2D"]
position = Vector2(323, 252)
script = ExtResource("1_47de6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ebkaj")
debug_color = Color(0, 0.6, 0.713726, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Small" type="Area2D" parent="."]

[node name="Small" type="CollisionShape2D" parent="Small"]
shape = SubResource("CircleShape2D_yp5yy")

[node name="Medium" type="Area2D" parent="."]

[node name="Medium" type="CollisionShape2D" parent="Medium"]
shape = SubResource("CircleShape2D_5eb51")

[node name="Large" type="Area2D" parent="."]

[node name="Large" type="CollisionShape2D" parent="Large"]
shape = SubResource("CircleShape2D_v7vqt")

[node name="laser_pivot" type="Node2D" parent="."]

[node name="laser_area" type="Area2D" parent="laser_pivot"]

[node name="laser_hitbox" type="CollisionShape2D" parent="laser_pivot/laser_area"]
position = Vector2(435.5, 0)
shape = SubResource("RectangleShape2D_f2dbw")
disabled = true
debug_color = Color(0.941176, 0, 0.615686, 0.419608)
